# CN-Stream

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  appveyor.yml
MATLAB/: CN_Stream.ini  CN_Stream.m  CN_Stream_2.m  CN_Stream_depth.m  CN_Stream_last.ini  RF_build_P.m  RF_build_U.m  RF_build_W.m  RF_build_eta.m  RF_calcA.m  RF_calc_a.m  RF_calc_eta.m  RF_calc_slope.m  RF_calcer.m  RF_calcuvcs.m  RF_check.m  RF_decide.m  RF_display_results.m  RF_initial_solution.m  RF_initialize.m  RF_iter_plot.m  RF_iter_store.m  RF_solve.m  RF_solve_auto.m  RF_solve_iterate.m  RF_write_waverfcof.m  TransformRFdata.m  add_horizontal.m  ini2struct.m  struct2ini.m  tests_CN_Stream_routines.m  wave_number.m
cmake/: CMakePack.cmake
example/: CMakeLists.txt
example/C++/: .directory  CMakeLists.txt  Makefile  prog
example/C++/src/: commCNS.cpp  commCNS.h  main.cpp
example/fortran/: CMakeLists.txt  CreateInputDict.f90  main.f90  makefile  modComm_CN_Stream.f90  modVariablesRF.f90
example/fortran/Computation/: RF_input.dict
example/ofCNStream/: testCNStream.C
example/ofCNStream/Make/: files  options
input/: CN_Stream_input.dict
src/: CN_Stream.vfproj
src/libCNStream/: CMakeLists.txt  HOS_modlinear_wave.f90  HOS_modmaths.f90  lib_CN_Stream.f90  main_CN_Stream.f90  modCNinitialize.f90  modMatrix.f90  modModal.f90  modOutputs.f90  modReconstrucVol.f90  modReconstruction.f90  modSetupNameList.f90  modSolve.f90  modType.f90  modUtils.f90  modVariablesRF.f90  mod_CN_Stream.f90  variables_CN_Stream.h  variables_output_CN_Stream.h
src/libFyMc/: CMakeLists.txt  LICENSE  README.md
src/libFyMc/example/testDict/: main  main.f90  makefile
src/libFyMc/example/testSurfMesh/: main.f90  surfMesh.dict
src/libFyMc/src/: main.f90  mfpGlobal.f90
src/libFyMc/src/general/: mfpGeneral.f90
src/libFyMc/src/general/auxiliary/: arrayOperaion.inc  auxiliary.inc
src/libFyMc/src/general/dataArray/: dataArray.inc  dataArray.typ  testDataArray.inc
src/libFyMc/src/general/dictionary/: dictDataBase.inc  dictDataBase.typ  dictionary.inc  dictionary.typ  dictionaryPtr.inc  dictionaryPtr.typ  testDictionary.inc
src/libFyMc/src/general/fileIO/: fileIO.inc  fileIO.typ
src/libFyMc/src/general/sLookUpTable/: sLookUpTable.inc  sLookUpTable.typ  testSLTable.inc
src/libFyMc/src/general/string/: string.inc  string.typ  stringI.inc  stringI.typ  testString.inc
src/libFyMc/src/geometry/: mfpGeometry.f90
src/libFyMc/src/geometry/auxiliary/: getGaussCoordinate.inc
src/libFyMc/src/geometry/baseGeometry/: panel.inc  panel.typ  point.inc  point.typ
src/libFyMc/src/geometry/surfMesh/: circularCylinderShell.inc  circularCylinderShell.typ  ellipsoidSurfMesh.inc  ellipsoidSurfMesh.typ  hemiSphereSurfMesh.inc  hemiSphereSurfMesh.typ  paraPipeSurfMesh.inc  paraPipeSurfMesh.typ  semiEllipsoidSurfMesh.inc  semiEllipsoidSurfMesh.typ  sphereSurfMesh.inc  sphereSurfMesh.typ  surfMesh.inc  surfMesh.typ  testSurfMesh.inc
src/libFyMc/src/mathConstant/: gaussQuadrature.inc
